[PAY-307] Fix spacing on mutuals to match Figma

--- a/packages/web/src/pages/profile-page/components/desktop/ProfileMutuals.module.css
+++ b/packages/web/src/pages/profile-page/components/desktop/ProfileMutuals.module.css
@@ -21,8 +21,8 @@
 }
 
 .contentContainer {
-  margin-top: 16px;
-  padding: 16px 8px 8px;
+  margin-top: 12px;
+  padding: 16px 8px 8px 12px;
   background: var(--white);
   border-radius: 4px;
   box-shadow: 0px 2px 5px var(--tile-shadow-3), 0px 1px 0px var(--tile-shadow-2),
